k8s/traefik/mermaid.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mermaid-live-editor
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-tls
  rules:
    - host: mermaid.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mermaid-live-editor
                port:
                  number: 80
